fix the nesting issue and edit title and scrollbar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,14 @@
   display: none;
 }
 
+.scrollbar-primary::-webkit-scrollbar {
+  background-color: rgb(169, 174, 175);
+}
+
+.scrollbar-primary::-webkit-scrollbar-thumb {
+  outline: 1px solid rgb(0, 0, 0);
+  background-color: #555;
+}
 
 nav ul a,
 nav .brand-logo {
